--- a/main.html
+++ b/main.html
@@ -38,13 +38,13 @@
             <input type="date" id="dob" name="dob" required>
 
 			<label for="phoneNumber">Phone Number*</label>
-            <input type="number" id="phoneNumber" name="phoneNumber" required>
+            <input type="tel" id="tel" name="phoneNumber" required>
             
             <label for="password">Password*</label>
             <input type="password" id="password" name="password" required>
 
 			<label for="agreement">I agree to the TOS*</label>
-            <input type="agreement" id="agreement" name="agreement" required>
+            <input type="Checkbox" id="tos" name="agreement" required>
             
             <button type="submit">Submit</button>
         </form>
