--- a/main.html
+++ b/main.html
@@ -37,13 +37,13 @@
             <label for="dob">DOB*</label>
             <input type="date" id="dob" name="dob" required>
 
-			<label for="phoneNumber">Phone Number*</label>
+			<label for="tel">Phone Number*</label>
             <input type="tel" id="tel" name="phoneNumber" required>
             
             <label for="password">Password*</label>
             <input type="password" id="password" name="password" required>
 
-			<label for="agreement">I agree to the TOS*</label>
+			<label for="tos">I agree to the TOS*</label>
             <input type="Checkbox" id="tos" name="agreement" required>
             
             <button type="submit">Submit</button>
